tests/ui/inference/note-and-explain-ReVar-124973.stderr
error[E0700]: hidden type for `impl Future<Output = ()>` captures lifetime that does not appear in bounds
  --> $DIR/note-and-explain-ReVar-124973.rs:5:73
   |
LL | async unsafe extern "C" fn multiple_named_lifetimes<'a, 'b>(_: u8, ...) {}
   | ----------------------------------------------------------------------- ^^
   | |
   | opaque type defined here
   |
   = note: hidden type `{async fn body of multiple_named_lifetimes<'a, 'b>()}` captures lifetime `'_`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0700`.
